--- a/locales/mr.json
+++ b/locales/mr.json
@@ -1,16 +1,22 @@
 {
 	"hrs recorded in": "%language मध्ये %hours तास रेकॉर्ड झाले",
 	"hrs validated in": "%language मध्ये %hours तासांचे प्रमाणीकरण केले गेले.",
-	"hours": "ಗಂಟೆಗಳು",
-	"minutes": "ನಿಮಿಷಗಳು",
+	"hours": "तास",
+	"minutes": "मिनिट",
 	"seconds": "",
-	"social sharing text with rank": "Http://boloindia.nplt.in  ನಲ್ಲಿ ಭಾರತಕ್ಕಾಗಿ ಮುಕ್ತ ಭಾಷಾ ಭಂಡಾರವನ್ನು ನಿರ್ಮಿಸಲು ನಾನು ಕೊಡುಗೆಯನ್ನು ನೀಡಿದ್ದೇನೆ. ನೀವು ಮತ್ತು ನಾನು ನಮ್ಮ ಧ್ವನಿಗಳನ್ನು ದಾನ ಮಾಡುವ ಮೂಲಕ ಯಂತ್ರಗಳಿಗೆ ನಮ್ಮ ಭಾಷೆಯನ್ನು ಕಲಿಯಲು ಸಹಾಯ ಮಾಡುವಲ್ಲಿ   ಒಂದು ವ್ಯತ್ಯಾಸವನ್ನು ಮಾಡಬಹುದು. ಬೊಲೊ ಇಂಡಿಯಾದಲ್ಲಿ ನಮ್ಮ %language ಭಾಷೆ %rank ಸ್ಥಾನದಲ್ಲಿದೆ. ನಿಮ್ಮ ಚಿಕ್ಕ ಕೊಡುಗೆಯನ್ನು ನೀಡಿ ಮತ್ತು ಭಾಷೆಯನ್ನು ಸಮೃದ್ಧಗೊಳಿಸುವಿರಾ? ",
-	"social sharing text without rank": "Http://boloindia.nplt.in  ನಲ್ಲಿ ಭಾರತಕ್ಕಾಗಿ ಮುಕ್ತ ಭಾಷಾ ಭಂಡಾರವನ್ನು ನಿರ್ಮಿಸಲು ನಾನು ಕೊಡುಗೆಯನ್ನು ನೀಡಿದ್ದೇನೆ. ನೀವು ಮತ್ತು ನಾನು ನಮ್ಮ ಧ್ವನಿಗಳನ್ನು ದಾನ ಮಾಡುವ ಮೂಲಕ ಯಂತ್ರಗಳಿಗೆ ನಮ್ಮ ಭಾಷೆಯನ್ನು ಕಲಿಯಲು ಸಹಾಯ ಮಾಡುವಲ್ಲಿ   ಒಂದು ವ್ಯತ್ಯಾಸವನ್ನು ಮಾಡಬಹುದು. ನಿಮ್ಮ ಚಿಕ್ಕ ಕೊಡುಗೆಯನ್ನು ನೀಡಿ ಮತ್ತು ಭಾಷೆಯನ್ನು ಸಮೃದ್ಧಗೊಳಿಸುವಿರಾ?",
+	"social sharing text with rank": "मी भारतासाठी ओपन भाषा संग्रह बनविण्यासाठी https://boloindia.nplt.in वर माझे योगदान दिले आहे. तुम्ही आणि मी आपल्या आवाजांचे योगदान देऊन ह्या उपक्रमात खूप मदत करू शकतो, ज्यामुळे मशीनला आपण जे काही बोलत आहोत ते शिक्षण्यासाठी मदत मिळत आहे. बोला भारत वर आपल्या %language भाषाचा नंबर %rank आहे. आपली भाषा सशक्त बनविण्यासाठी तुम्ही तुमचे योगदान देऊ इच्छिता?",
+	"social sharing text without rank": "मी भारतासाठी ओपन भाषा संग्रह बनविण्यासाठी https://boloindia.nplt.in वर माझे योगदान दिले आहे. तुम्ही आणि मी आपल्या आवाजांचे योगदान देऊन ह्या उपक्रमात खूप मदत करू शकतो, ज्यामुळे मशीनला आपण जे काही बोलत आहोत ते शिक्षण्यासाठी मदत मिळत आहे. आपली भाषा सशक्त बनविण्यासाठी तुम्ही तुमचे योगदान देऊ इच्छिता?",
+	"Recording for 5 seconds": "5 सेकंदसाठी रेकॉर्ड केले जात आहे",
+	"Recording for 4 seconds": "4 सेकंदसाठी रेकॉर्ड केले जात आहे",
+	"Recording for 3 seconds": "3 सेकंदसाठी रेकॉर्ड केले जात आहे",
+	"Recording for 2 seconds": "2 सेकंदसाठी रेकॉर्ड केले जात आहे",
+	"Recording for 1 seconds": "1 सेकंदसाठी रेकॉर्ड केले जात आहे",
+	"Congratulations!!! You have completed this batch of sentences": "अभिनंदन!!! आपण वाक्यांच्या ह्या बॅचला पूर्ण केले आहे",
 	"Language": "मराठी",
 	"Speech Recognition Models": "Speech Recognition Models",
-	"About Us": "About Us",
+	"About Us": "आमच्याबद्दल",
 	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
-	"Show All": "Show All",
+	"Show All": "सर्व दाखवा",
 	"Speak": "बोला",
 	"Contribute Your Voice": "तुमच्या आवाजाचे योगदान द्या",
 	"Contribute your voice to create an open data repository of Indian languages": "भारतीय भाषांचा ओपन डेटा संग्रह तयार करण्यासाठी आपल्या आवाजाचे योगदान द्या",
@@ -25,33 +31,143 @@
 	"languages contributed": "या भाषांमधे योगदान दिले गेले",
 	"speakers contributed": "या वक्त्यांनी योगदान दिले",
 	"hours recorded": "इतके तास रेकॉर्ड केले गेले",
-	"Top Languages": "Top Languages",
-	"By hours of data contributed": "By hours of data contributed",
-	"By number of speakers": "By number of speakers",
-	"VIEW ALL DETAILS": "VIEW ALL DETAILS",
-	"Hide details": "Hide details",
-	"Speaker Details": "Speaker Details",
-	"All the fields are optional": "All the fields are optional",
-	"Not You? Change User": "Not You? Change User",
-	"Username": "Username",
-	"Enter preferred username": "Enter preferred username",
+	"Top Languages": "प्रमुख भाषा",
+	"By hours of data contributed": "दिलेल्या डेटाचे योगदान तासांनुसार",
+	"By number of speakers": "वक्त्यांच्या संख्येद्वारे",
+	"VIEW ALL DETAILS": "सर्व तपशील पहा",
+	"Hide details": "तपशील लपवा",
+	"Speaker Details": "वक्त्याचे विवरण",
+	"All the fields are optional": "सर्व फील्ड पर्यायी आहेत",
+	"Not You? Change User": "तुम्ही नाही? वापरकर्ता बदला",
+	"Username": "वापरकर्ता नाव",
+	"Enter preferred username": "पसंतीचे वापरकर्ता नाव प्रविष्ट करा",
 	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
-	"Mother Tongue": "Mother Tongue",
-	"Select Mother Tongue": "Select Mother Tongue",
-	"Age Group": "Age Group",
-	"Select Age Group": "Select Age Group",
-	"Gender": "Gender",
-	"Male": "Male",
-	"Female": "Female",
-	"Others": "Others",
-	"Transgender - He": "Transgender - He",
-	"Transgender - She": "Transgender - She",
-	"Rather Not Say": "Rather Not Say",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
-	"LET'S GO": "LET'S GO",
-	"Select Your Preferred Language": "Select Your Preferred Language",
-	"Terms & Conditions": "Terms & Conditions",
-	"Privacy Policy": "Privacy Policy",
-	"Feedback": "Feedback"
+	"Mother Tongue": "मातृभाषा",
+	"Select Mother Tongue": "मातृभाषा निवडा",
+	"Age Group": "वयोगट",
+	"Select Age Group": "वयोगट निवडा",
+	"Gender": "लिंग",
+	"Male": "पुरुष",
+	"Female": "स्त्री",
+	"Others": "इतर",
+	"Transgender - He": "ट्रांसजेंडर - पुरुष",
+	"Transgender - She": "ट्रांसजेंडर - महिला",
+	"Rather Not Say": "सांगू इच्छित नाही",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "पुढे जाऊन, तुम्ही आमच्या <a href=\"/terms-and-conditions\">अटी व शर्ती</a> मान्य करीत आहात",
+	"LET'S GO": "चला, पुढे जाऊया",
+	"Select Your Preferred Language": "तुमच्या पसंतीची भाषा निवडा",
+	"Terms & Conditions": "अटी व शर्ती",
+	"Privacy Policy": "गोपनीयता धोरण",
+	"Feedback": "अभिप्राय द्या",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
+	"India is a land of many languages, our digital strategy must reflect it.": "भारत हा अनेक भाषांचा देश आहे, आपल्या डिजिटल योजनेमध्ये ह्या बाबीं दाखविल्या पाहिजेत.",
+	"90% of India's population uses region languages to conduct their day-to-day activities.": "भारतातील 90% लोक संख्या आपले दैनंदिन कार्य करण्यासाठी प्रादेशिक भाषेचा वापर करतात.",
+	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ज्याप्रमाणे अधिकाधिक लोक आर्थिक, शैक्षणिक आणि सामाजिक उपक्रमांसाठी डिजिटल प्लॅटफॉर्मचा वापर करीत आहेत, त्याप्रमाणे डिजिटल प्लॅटफॉर्मने भारतीय भाषांमध्ये अखंडपणे कार्य केले पाहिजे.",
+	"Help your own language": "आपली भाषा प्रगत बनविण्यासाठी मदत करा",
+	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "आपल्याला आपल्या भाषेसाठी अनुकूल असलेले भाषा ओळख तंत्रज्ञान तयार करण्याची आवश्यकता आहे. याला अचूक असणे आणि लोकांच्या दैनंदिन कार्य करण्याची भाषा आणि व्यवहार समजणे आवश्यक आहे.",
+	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "आपल्या भाषेमध्ये जागतिक स्तरीय भाषा ओळख तंत्रज्ञान असल्यास, त्यामुळे शैक्षणिक, आरोग्य सेवा आणि मीडियासारख्या अनेक क्षेत्रांमध्ये आपल्याला आपल्या भाषेत डिजिटल फर्स्ट मॉडेल बनविणे शक्य होईल.",
+	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "जो उपयोगी टूल्स, सुविधा आणि मॉडल तयार करण्याचा का प्रस्ताव केला गेला आहे तो बोला भारत क्राउड सोर्सिंग प्लैटफॉर्मच्या माध्यमातून ओपन सोर्सच्या योगदानावर आधारित असेल.",
+	"Crowd Sourcing & your contribution": "क्राउड सोर्सिंग आणि तुमचे योगदान",
+	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "भाषा ओळख \"मशीन-लर्निंग\" तंत्रज्ञानावर अवलंबून असते ज्यात विविध डेटासेट्स आणि त्याच्याशी संबंधित मजकूर समाविष्ट असलेल्या मोठ्या संग्रहाची आवश्यकता असते. ज्यामध्ये विविध भारतीय आवाज आणि त्याच्याशी संबंधित मजकूराचा समावेश असेल.बोला भारत च्या माध्यमातून, आपण भारतीय भाषा बोलणाऱ्या भारतीय आवाजांचा एक विविध ओपन संग्रह बनवू इच्छित आहोत, ज्याचा उपयोग ह्या उपक्रममधे केला जाईल.",
+	"This is where you come in.": "ह्या कार्यात आम्हाला आपल्या मदतीची गरज आहे",
+	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "आम्ही आपल्याला ह्या उपक्रमामधे सहभागी होण्यासाठी आणि तुमच्या इच्छेनुसार तुमच्या आवाजाचे योगदान करण्यासाठी आमंत्रित करीत आहोत. ह्यामधे तुमचा आवाज रेकॉर्ड करुन आम्हाला खूप आनंद होईल आणि ह्यासाठी, तुम्ही ह्या संकेतस्थळावर अनेक वेळा भेट देऊन काम करू शकता आणि दरवेळेस तुम्ही तुमचे काम जिथे अर्धवट सोडले होते तिथून पुढे सुरू करु शकता.",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "आपल्या योगदानाच्या प्रत्येक मिनिटाने मोठा फरक पडेल आणि हे आम्हाला आमच्या उद्दिष्टाच्या आणखी जवळ घेऊन जाईल",
+	"Select a language": "एक भाषा निवडा",
+	"START CONTRIBUTING": "योगदान देणे सुरू करा",
+	"ABOUT THE ORGANISATION": "संघटने बद्दल",
+	"EkStep Foundation": "एकस्टेप फाउंडेशन",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकस्टेप फाउंडेशन सर्व भागीदारांना एकत्रित आणते आणि मोठ्या प्रमाणावर कठिण सामाजिक समस्यांना सोडविण्यासाठी ओपन इंफ्रास्ट्रक्चर, टूल आणि फ्रेमवर्क बनवित आहे. ह्यासाठी, आम्ही स्वतः बनविलेल्या सनबर्ड नावाच्या ओपन सोर्स डिजिटल इंफ्रास्ट्रक्चरचा वापर करतो आणि सोसाइटल प्लैटफॉर्म एप्रोच नावाच्या एक खास विचाराचे आणि काम करण्याच्या पद्धतिचे अनुकरण करतो.",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप ही रोहिणी आणि नंदन निलेकणी आणि शंकर मारूवाडा यांनी स्थापन केलेली एक ना-नफा संस्था आहे.",
+	"Quick Tips": "झटपट टिपा",
+	"Please test your <b>Microphone</b>": "कृपया तुमच्या <b>मायक्रोफोनची</b> तपासणी करा",
+	"Please test your <b>Speakers</b>": "कृपया तुमच्या <b>स्पीकर्सची</b> तपासणी करा",
+	"Ensure there is <b>no background noise</b>": "कसलाही पार्श्वभूमी आवाज येत नसल्याची खात्री करा",
+	"Read once <b>before recording it</b>": "<b>रेकॉर्ड</b> करण्यापूर्वी एकदा वाचा",
+	"Get started by clicking on <b>Record</b> button": "<b>रेकॉर्ड</b> बटणावर क्लिक करून सुरू करा",
+	"Report": "अहवाल द्या",
+	"Test your Microphone and Speakers": "कृपया तुमच्या मायक्रोफोन आणि स्पीकर्सची तपासणी करा",
+	"Test Mic": "माइकची तपासणी करा",
+	"Please speak clearly": "Please speak clearly",
+	"Low/No Background Noise": "Low/No Background Noise",
+	"Background Noise Detected": "पार्श्वभूमी आवाज येत आहे",
+	"Test Speakers": "स्पीकरची तपासणी करा",
+	"Let's get started!": "चला, सुरू करु या.",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "रेकॉर्डिंग <span id=\"counter\"></span> सेकंदनंतर आपल्या आप बंद होईल",
+	"Audio recording is too small. Please Re-record": "ऑडिओ रेकॉर्डिंग खूपच लहान आहे. कृपया पुन्हा रेकॉर्ड करा",
+	"SKIP": "सोडून टाका/वगळून टाका",
+	"START RECORDING": "रेकॉर्ड करणे सुरू करा",
+	"STOP RECORDING": "रेकॉर्ड करणे बंद करा",
+	"RE-RECORD": "पुन्हा रेकॉर्ड करा",
+	"NEXT": "पुढे जा.",
+	"Report Content": "सामग्रीचा अवाहल द्या",
+	"Help us understand what’s wrong with the sentence": "ह्या वाक्यात काय चूक आहे, हे समजण्यास आम्हाला मदत करा",
+	"Offensive": "आक्षेपार्ह",
+	"Hurting sentiments of religion, community or abusive content etc.": "धर्म, समुदायाच्या भावनांना दुखवणारी किंवा अपमानास्पद सामग्री.",
+	"Prohibited Content": "प्रतिबंधित सामग्री",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "द्वेषाने भरलेली / भेदभाव करणारी / असभ्य भाषा, नशेच्या औषधांचा प्रसार करणारी इ.",
+	"Political Statement": "राजकीय विधान",
+	"Hateful Political views, amplifying hate-speech etc.": "द्वेषपूर्ण राजकीय मते, द्वेष वाढवणारे भाषण इ.",
+	"Misinformation": "चुकीची माहिती",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "ऐकीव गोष्टी / अफवा, मुद्दाम खोटी माहिती इ.",
+	"Please specify the reason (Optional)": "कृपया कारण निर्दिष्ट करा (पर्यायी)",
+	"SUBMIT": "सबमिट करा",
+	"Thank You": "धन्यवाद",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
+	"Error!!!": "त्रुटी!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "आपल्या विनंतीवर प्रक्रिया करताना एक अनपेक्षित त्रुटि आली आहे. कृपया थोड्या वेळाने पुन्हा प्रयत्न करा.",
+	"Close": "बंद करा",
+	"Thank you for contributing!": "तुम्ही दिलेल्या योगदानाबद्दल धन्यवाद",
+	"You are a champion": "आपण एक विजेता आहात",
+	"WooHoo!! You took the first important step": "शब्बास!! आपण पहिले महत्त्वपूर्ण पाऊल उचलले आहे.",
+	"recordings contributed": "रेकॉर्डिंगचे योगदान दिले गेले",
+	"Share it with your friends and family": "ह्याला तुमच्या मित्र परिवार आणि कुटुंबासह शेअर करा",
+	"Did you know?": "तुम्हाला माहित आहे का?",
+	"Most Contributed": "सर्वात अधिक योगदान",
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> साठी डेटा रेकॉर्ड केला गेला",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "आपल्या भाषेसाठी 100 तासांचे लक्ष्य पूर्ण करण्यासाठी सहयोग करा. आम्हाला माहित आहे की तुम्ही खूप काही करू शकता!",
+	"Contribute More": "अधिक योगदान द्या",
+	"Instructions": "सूचना",
+	"Thank you for your enthusiasm to validate the recordings.": "पूर्ण उत्साहाने रेकॉर्डिंग्सला प्रमाणित करण्यासाठी तुम्हाला धन्यवाद.",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "आमच्याकडे <span id=\"spn-validation-language\"></span> भाषेमध्ये कोणताही डेटा उपलब्ध नाही. कृपया पुन्हा प्रयत्न करा.",
+	"Would you also like to contribute your voice?": "आपण आपल्या आवाजाचे योगदान देऊ इच्छिता?",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> मध्ये योगदान द्यायला सुरूवात करा",
+	"Thank you for validating!": "सत्यापन केल्याबद्दल धन्यवाद!",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> रेकॉर्डिंग्सला प्रमाणित करण्यासाठी तुम्हाला धन्यवाद",
+	"Validate More": "अधिक प्रमाणित करा",
+	"Incorrect": "चुकीचे आहे",
+	"Play": "प्ले करा",
+	"Replay": "पुन्हा प्ले करा",
+	"Pause": "विराम द्या",
+	"Correct": "योग्य आहे",
+	"Skip": "सोडून टाका/वगळून टाका",
+	"Validating Instructions": "प्रमाणित करण्याबाबतच्या सूचना",
+	"Please test your <b>speakers</b>": "कृपया तुमच्या स्पीकर्सची तपासणी करा",
+	"Ensure the voice is <b>clear and audible</b>": "आवाज स्पष्ट आणि ऐकण्यायोग्य असल्याची खात्री करा",
+	"Match the voice to the text <b>accurately</b>": "मजकूराशी आवाज अचूकपणे जुळवा",
+	"If you are unsure of the match, skip the particular voice sample": "जर आपल्याला कोणत्याही आवाजाच्या जुळणीबद्दल खात्री वाटत नसेल, तर आपण तो आवाजाचा नमुना सोडून टाका",
+	"START": "सुरू करा",
+	"Subject": "Subject",
+	"Description": "Description",
+	"Please type here...": "Please type here...",
+	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"Thank You for your valuable feedback": "आपल्या बहुमूल्य अभिप्रायाबद्दल धन्यवाद",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपला अभिप्राय आम्हाला बोला भारत ला तुमच्यासाठी उपयोगी बनविण्यासाठी मदत करतो, तुम्ही तुमच्या वेळेत वेळ काढून आम्हाला आपला अभिप्राय दिल्याबद्दल आम्ही तुमचे कौतुक करतो.",
+	"Back to Home": "मुख्यपृष्ठावर परत जा",
+	"Oops": "अरेरे",
+	"Page Not Found": "पृष्ठ सापडले नाही",
+	"Looks like you have taken a wrong turn here": "कदाचित तुम्ही इथे चुकूण आले आहात",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "मुख्यपृष्ठावर परत जाण्यासाठी <a class=\"\" href=\"/\">इथे वर</a> क्लिक करा",
+	"All Languages": "सर्व भाषा",
+	"Data Last Updated": "शेवटी अपडेट करण्याची तारीख",
+	"We do not have any data for this language, would you like to contribute for it?": "आमच्याकडे ह्या भाषेमध्ये कोणताही डेटा उपलब्ध नाही, तुम्ही ह्यामध्ये काही योगदान देऊ इच्छिता का?",
+	"Contribute Now": "आता योगदान द्या",
+	"hours validated": "इतके तास प्रमाणित केले गेले",
+	"Progress Chart": "प्रोग्रेस चार्ट",
+	"Monthly": "मासिक",
+	"Quarterly": "त्रैमासिक",
+	"Gender Distribution": "लिंग वर्गीकरण",
+	"State Wise distribution": "राज्यवार वर्गीकरण",
+	"Age Group Distribution": "वय गट वर्गीकरण"
 }
