--- a/locales/pa.json
+++ b/locales/pa.json
@@ -19,10 +19,10 @@
 	"Mother Tongue": "ਮਾਂ-ਬੋਲੀ",
 	"Age Group": "ਉਮਰ ਸਮੂਹ",
 	"Gender": "ਲਿੰਗ",
-	"All the fields are optional": "ਸਾਰੇ ਖੇਤਰ ਵਿਕਲਪਿਕ ਹਨ",
+	"All the fields are optional": "ਸਾਰੇ ਖੇਤਰ ਚੋਣਵੇਂ ਹਨ",
 	"Not You? Change User": "ਕੀ ਇਹ ਤੁਸੀਂ ਨਹੀਂ ਹੋ? ਵਰਤੋਂਕਾਰ ਬਦਲੋ",
-	"Username": "ਵਰਤੋਂਕਾਰ ਨਾਮ",
-	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
+	"Username": "ਵਰਤੋਂਕਾਰ ਨਾਂ",
+	"Please don't use email or mobile number as user name": "ਵਰਤੋਂਕਾਰ ਨਾਂ, ਇੱਕ ਈਮੇਲ ਪਤਾ ਜਾਂ ਮੋਬਾਈਲ ਨੰਬਰ ਨਹੀਂ ਹੋ ਸਕਦਾ",
 	"Select Mother Tongue": "ਮਾਂ-ਬੋਲੀ ਚੁਣੋ",
 	"Pick age range": "Pick age range",
 	"I have read and agree to the": "I have read and agree to the",
@@ -49,7 +49,7 @@
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "ਏਕਸਟੈਪ ਫ਼ਾਉਂਡੇਸ਼ਸ਼ਨ ਜਟਿਲ ਸਮਾਜਿਕ ਸਮੱਸਿਆਵਾਂ ਦਾ ਵੱਡੇ ਪੈਮਾਨੇ 'ਤੇ ਹੱਲ ਕਰਨ ਲਈ ਭਾਗੀਦਾਰਾਂ ਨੂੰ ਇਕੱਠਾ ਕਰਕੇ ਖੁੱਲੇ ਇੰਫਰਾਸਟ੍ਰਕਚਰ, ਟੂਲ ਅਤੇ ਫਰੇਮਵਰਕ ਦਾ ਨਿਰਮਾਣ ਕਰਦੀ ਹੈ। ਅਸੀਂ ਇੰਝ ਕਰਨ ਲਈ ਸਾਡੇ ਵੱਲੋਂ ਬਣਾਏ ਗਏ \"ਸਨਬਰਡ\" ਨਾਮਕ ਖੁੱਲ੍ਹੇ ਸਰੋਤ ਦੇ ਡਿਜੀਟਲ ਇੰਫਰਾਸਟ੍ਰਕਚਰ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਹਾਂ ਅਤੇ \"ਸਮਾਜਿਕ ਪਲੇਟਫਾਰਮ ਪਹੁੰਚ\" ਨਾਮਕ ਇੱਕ ਸੋਚਣ ਅਤੇ ਕਰਨ ਦੇ ਢੰਗ ਦੀ ਪਾਲਣਾ ਕਰਦੇ ਹਾਂ।",
 	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "ਏਕਸਟੈਪ, ਰੋਹਿਨੀ ਅਤੇ ਨੰਦਨ ਨਿਲੇਕਾਨੀ ਅਤੇ ਸ਼ੰਕਰ ਮਾਰੂਵਾੜਾ ਵੱਲੋਂ ਸਥਾਪਿਤ ਇੱਕ ਗੈਰ-ਮੁਨਾਫ਼ਾ ਸੰਸਥਾ ਹੈ।",
 	"Male": "ਪੁਰਸ਼",
-	"Female": "ਮਹਿਲਾ",
+	"Female": "ਇਸਤਰੀ",
 	"Others": "ਹੋਰ",
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
@@ -62,8 +62,8 @@
 	"RE-RECORD": "ਮੁੜ-ਰਿਕਾਰਡ ਕਰੋ",
 	"NEXT": "ਅੱਗੇ",
 	"away from reaching your goal!": "ਤੁਸੀਂ ਆਪਣੇ ਟੀਚੇ 'ਤੇ ਪਹੁੰਚਣ ਤੋਂ ਇੰਨਾ ਦੂਰ ਹੋ!",
-	"Error!!!": "ਗੜਬੜ!!!",
-	"An unexpected error occured while processing your request. Please try after some time.": "ਤੁਹਾਡੀ ਬੇਨਤੀ 'ਤੇ ਪ੍ਰਕਿਰਿਆ ਕਰਨ ਦੌਰਾਨ ਕੋਈ ਅਗਿਆਤ ਗੜਬੜ ਹੋ ਗਈ। ਕਿਰਪਾ ਕਰਕੇ ਕੁਝ ਸਮੇਂ ਬਾਅਦ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ।",
+	"Error!!!": "ਗ਼ਲਤੀ!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "ਤੁਹਾਡੀ ਬੇਨਤੀ 'ਤੇ ਪ੍ਰਕਿਰਿਆ ਕਰਨ ਦੌਰਾਨ ਕੋਈ ਅਗਿਆਤ ਗ਼ਲਤੀ ਹੋ ਗਈ। ਕਿਰਪਾ ਕਰਕੇ ਕੁਝ ਸਮੇਂ ਬਾਅਦ ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ।",
 	"Close": "ਬੰਦ ਕਰੋ",
 	"Thank you for contributing!": "ਯੋਗਦਾਨ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ!",
 	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਕਰਕੇ ਅਸੀਂ ਆਪਣੇ ਟੀਚੇ ਦੇ <b><span id=\"user-contribution\">ਸਕਿੰਟ</span></b> ਹੋਰ ਨੇੜੇ ਪਹੁੰਚ ਗਏ ਹਾਂ!!!",
@@ -86,8 +86,7 @@
 	"Help us by validating the voice samples that others have contributed": "ਹੋਰ ਵੱਲੋਂ ਯੋਗਦਾਨ ਪਾਏ ਗਏ ਅਵਾਜ਼ੀ ਨਮੂਨਿਆਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਵਿੱਚ ਸਾਡੀ ਮਦਦ ਕਰੋ",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "ਆਪਣੀ ਤਰਜੀਹੀ ਭਾਸ਼ਾ ਚੁਣੋ",
-	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
-	"languages contributed": "ਯੋਗਦਾਨ ਕੀਤੀਆਂ ਗਈਆਂ ਭਾਸ਼ਾਵਾਂ",
+	"languages contributed": "ਯੋਗਦਾਨ ਪਾਈਆਂ ਭਾਸ਼ਾਵਾਂ",
 	"hours recorded": "ਰਿਕਾਰਡ ਕੀਤੇ ਗਏ ਘੰਟੇ",
 	"Select the language for contribution": "ਉਹ ਭਾਸ਼ਾ ਚੁਣੋ ਜਿਸ ਵਿੱਚ ਤੁਸੀਂ ਯੋਗਦਾਨ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "ਵਾਕਿਆਂਸ਼: ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਲਈ ਇੱਕ ਕਰਾਊਡਸੋਰਸਿੰਗ ਪਹਿਲ",
@@ -100,8 +99,8 @@
 	"Select Age Group": "ਉਮਰ ਸਮੂਹ ਚੁਣੋ",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "ਮੈਂ <a href=\"/terms-and-conditions\">ਨਿਯਮ ਅਤੇ ਸ਼ਰਤਾਂ</a> ਨੂੰ ਪੜ੍ਹ ਲਿਆ ਹੈ ਮੈਂ ਇਹਨਾਂ ਨਾਲ ਸਹਿਮਤ ਹਾਂ",
 	"Show All": "ਸਭ ਵੇਖਾਓ",
-	"Enter preferred username": "ਤਰਜੀਹੀ ਵਰਤੋਂਕਾਰ ਨਾਮ ਦਾਖਲ ਕਰੋ",
-	"Username cannot be more than 12 characters": "ਵਰਤੋਂਕਾਰ ਨਾਮ ਵਿੱਚ 12 ਤੋਂ ਜ਼ਿਆਦਾ ਅੱਖਰ-ਚਿੰਨ੍ਹ ਨਹੀਂ ਹੋ ਸਕਦੇ",
+	"Enter preferred username": "ਤਰਜੀਹੀ ਵਰਤੋਂਕਾਰ ਨਾਂ ਦਿਓ",
+	"Username cannot be more than 12 characters": "ਵਰਤੋਂਕਾਰ ਨਾਂ ਵਿੱਚ 12 ਤੋਂ ਜ਼ਿਆਦਾ ਅੱਖਰ ਨਹੀਂ ਹੋ ਸਕਦੇ",
 	"Data Last Updated": "ਡਾਟਾ ਅੱਪਡੇਟ ਹੋਣ ਦੀ ਪਿਛਲੀ ਤਾਰੀਖ਼",
 	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "ਇੱਕ ਖੁੱਲ੍ਹੇ ਸਰੋਤ ਵਾਲੀ ਰਣਨੀਤੀ, ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਪਿਆਰ ਕਰਨ ਵਾਲੇ ਅਤੇ ਉਸ ਪ੍ਰਤੀ ਸੰਵੇਗਸ਼ੀਲ ਵੱਖ-ਵੱਖ ਭਾਸ਼ਾਈ ਭਾਈਚਾਰਿਆਂ, ਵਿਅਕਤੀਆਂ ਅਤੇ ਤਕਨਾਲੋਜੀ ਮਾਹਰਾਂ ਨੂੰ ਬੋਲੀ ਪਛਾਣ ਐਪਲੀਕੇਸ਼ਨਾਂ ਬਣਾਉਣ ਦੇਵੇਗੀ, ਅਤੇ ਭਾਈਚਾਰੇ ਦੀ ਭਲਾਈ ਲਈ ਉਹਨਾਂ ਨੂੰ ਵੱਖ-ਵੱਖ ਡੋਮੇਨਾਂ ਵਿੱਚ ਉਹਨਾਂ ਦਾ ਏਕੀਕਰਨ ਕਰਨ ਦੇਵੇਗੀ।",
 	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "ਇੰਟਰਨੈੱਟ ਨੂੰ ਵਰਤਣ ਵਾਲਿਆਂ ਦੀ ਗਿਣਤੀ ਦੇ ਦਿਨੋਂ ਦਿਨ ਹੋ ਰਹੇ ਵਾਧੇ ਕਰਕੇ ਵਿੱਤੀ, ਸਿੱਖਿਅਕ ਅਤੇ ਆਰਥਿਕ ਗਤੀਵਿਧੀਆਂ ਲਈ ਡਿਜੀਟਲ ਪਲੇਟਫਾਰਮਾਂ ਨੂੰ ਵਰਤਣ ਦੀ ਮੰਗ ਰੋਜ਼ ਦੇ ਹਿਸਾਬ ਨਾਲ ਵੱਧਦੀ ਜਾ ਰਹੀ ਹੈ, ਇਸ ਲਈ ਸਾਨੂੰ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਨੂੰ ਪਹਿਲ ਦੇਣ ਬਾਰੇ ਸੋਚਣਾ ਸ਼ੁਰੂ ਕਰ ਦੇਣਾ ਚਾਹੀਦਾ ਹੈ।",
@@ -114,10 +113,10 @@
 	"Play": "ਚਲਾਓ",
 	"Thank you for your enthusiasm to validate the voice samples": "ਅਵਾਜ਼ੀ ਨਮੂਨਿਆਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਉਤਸ਼ਾਹ ਦਿਖਾਉਣ ਵਾਸਤੇ ਤੁਹਾਡਾ ਧੰਨਵਾਦ",
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ਅਸੀਂ ਹਾਲ ਹੀ ਵਿੱਚ <span id=\"spn-validation-language\"></span> ਭਾਸ਼ਾ ਲਈ ਡਾਟਾ ਇਕੱਤਰ ਕਰਨ ਦੀ ਸ਼ੁਰੂਆਤ ਕੀਤੀ ਹੈ ਅਤੇ ਅਸੀਂ ਉਮੀਦ ਕਰਦੇ ਹਾਂ ਕਿ ਸਾਡੇ ਕੋਲ ਬਹੁਤ ਜਲਦ ਅਵਾਜ਼ੀ ਨਮੂਨੇ ਹੋਣਗੇ, ਜਿਨ੍ਹਾਂ ਨੂੰ ਤੁਸੀਂ ਪ੍ਰਮਾਣਿਤ ਕਰ ਸਕੋਗੇ।",
-	"Would you also like to contribute your voice?": "ਕੀ ਤੁਸੀਂ ਆਪਣੀ ਅਵਾਜ਼ ਅਤੇ ਸ਼ਬਦਾਂ ਰਾਹੀਂ ਵੀ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੋਗੇ?",
+	"Would you also like to contribute your voice?": "ਕੀ ਤੁਸੀਂ ਆਪਣੀ ਆਵਾਜ਼ ਰਾਹੀਂ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
 	"Start Contributing": "ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰੋ",
-	"Thank you for validating!": "ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ!",
-	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "ਤੁਸੀਂ ਸਾਨੂੰ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕੀਤੀ",
+	"Thank you for validating!": "ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ ਹੈ!",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "ਤੁਸੀਂ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਸਾਡੀ ਮਦਦ ਕਰ ਚੁੱਕੇ ਹੋ",
 	"Validate More": "ਹੋਰ ਪ੍ਰਮਾਣਿਤ ਕਰੋ",
 	"Validating Instructions": "ਪ੍ਰਮਾਣੀਕਰਨ ਸੰਬੰਧੀ ਹਿਦਾਇਤਾਂ",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
@@ -125,16 +124,16 @@
 	"If you are unsure of the match, skip the particular voice sample": "ਜੇਕਰ ਤੁਹਾਨੂੰ ਮਿਲਾਨ ਬਾਰੇ ਪੱਕਾ ਪਤਾ ਨਹੀਂ ਹੈ, ਤਾਂ ਇਸ ਖਾਸ ਅਵਾਜ਼ੀ ਨਮੂਨੇ ਨੂੰ ਛੱਡੋ",
 	"Select the language": "ਇੱਕ ਭਾਸ਼ਾ ਚੁਣੋ",
 	"All Languages": "ਸਾਰੀਆਂ ਭਾਸ਼ਾਵਾਂ",
-	"We do not have any data for this language, would you like to contribute for it?": "ਸਾਡੇ ਕੋਲ ਇਸ ਭਾਸ਼ਾ ਲਈ ਕੋਈ ਡਾਟਾ ਨਹੀਂ ਹੈ, ਕੀ ਤੁਸੀਂ ਇਸ ਵਿੱਚ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੋਗੇ?",
+	"We do not have any data for this language, would you like to contribute for it?": "ਸਾਡੇ ਕੋਲ ਇਸ ਭਾਸ਼ਾ ਲਈ ਕੋਈ ਡਾਟਾ ਨਹੀਂ ਹੈ, ਕੀ ਤੁਸੀਂ ਇਸ ਵਾਸਤੇ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੋਗੇ?",
 	"Contribute Now": "ਹੁਣੇ ਯੋਗਦਾਨ ਪਾਓ",
 	"hours validated": "ਪ੍ਰਮਾਣਿਤ ਕੀਤੇ ਘੰਟੇ",
-	"Progress Chart": "ਪ੍ਰਗਤੀ ਸਮਾਂ-ਰੇਖਾ",
-	"Monthly": "ਮਹੀਨਾਵਾਰ",
+	"Progress Chart": "ਤਰੱਕੀ ਚਾਰਟ",
+	"Monthly": "ਮਹੀਨੇਵਾਰ",
 	"Quarterly": "ਤਿਮਾਹੀ",
 	"Gender Contribution": "ਲਿੰਗ ਮੁਤਾਬਕ ਯੋਗਦਾਨ",
 	"State Wise distribution": "ਰਾਜ ਮੁਤਾਬਕ ਵੰਡ",
 	"Age Group Distribution": "ਉਮਰ ਸਮੂਹ ਮੁਤਾਬਕ ਵੰਡ",
-	"Oops": "ਓਹੋ",
+	"Oops": "ਓਹ ਹੋ",
 	"Page Not Found": "ਪੰਨਾ ਨਹੀਂ ਮਿਲਿਆ",
 	"Looks like you have taken a wrong turn here": "ਲੱਗਦਾ ਹੈ ਕਿ ਤੁਸੀਂ ਕਿਸੇ ਗਲਤ ਥਾਂ 'ਤੇ ਆ ਗਏ ਹੋ",
 	"Click Here": "ਕਲਿਕ ਕਰੋ",
@@ -142,10 +141,10 @@
 	"hrs recorded in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਰਿਕਾਰਡ ਕੀਤੇ ਗਏ",
 	"hrs validated in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਪ੍ਰਮਾਣਿਤ ਕੀਤੇ ਗਏ",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ਸਕਿੰਟ ਬਾਅਦ ਰਿਕਾਰਡਿੰਗ ਆਪਣੇ-ਆਪ ਰੁਕ ਜਾਏਗੀ",
-	"Incorrect": "ਗ਼ਲਤ",
+	"Incorrect": "ਗ਼ਲਤ",
 	"Replay": "ਮੁੜ-ਚਲਾਓ",
-	"Pause": "ਰੋਕੋ",
-	"Correct": "ਸਹੀ",
+	"Pause": "ਵਿਰਾਮ",
+	"Correct": "ਠੀਕ",
 	"Skip": "ਛੱਡੋ",
 	"hours": "ਘੰਟੇ",
 	"minutes": "ਮਿੰਟ",
@@ -153,16 +152,16 @@
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "ਹੋਮ ਪੰਨੇ 'ਤੇ ਜਾਣ ਲਈ <a class=\"\" href=\"/\">'ਤੇ ਕਲਿੱਕ ਕਰੋ</a>",
 	"As a team, we are inviting you to join us and contribute your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "ਇੱਕ ਟੀਮ ਵਜੋਂ, ਅਸੀਂ ਤੁਹਾਨੂੰ ਸਾਡੇ ਨਾਲ ਜੁੜਨ ਲਈ ਅਤੇ ਇਸ ਪਹਿਲ ਵਿੱਚ ਆਪਣੀ ਆਵਾਜ਼ ਦਾ ਯੋਗਦਾਨ ਪਾਉਣ ਲਈ ਸੱਦਾ ਦੇ ਰਹੇ ਹਾਂ। ਇੱਕੋ ਵਾਰ ਵਿੱਚ ਆਪਣੀ ਅਵਾਜ਼ ਨੂੰ ਰਿਕਾਰਡ ਕਰਨਾ ਥੋੜ੍ਹਾ ਔਖਾ ਕੰਮ ਹੋ ਸਕਦਾ ਹੈ ਅਤੇ ਇਸੇ ਕਰਕੇ, ਅਸੀਂ ਆਪਣੀ ਵੈੱਬਸਾਈਟ 'ਤੇ ਸੌਖੇ ਉਪਾਅ ਬਣਾਏ ਹਨ, ਜਿੱਥੇ ਤੁਸੀਂ ਇੱਕ ਤੋਂ ਬਾਅਦ ਦੁਬਾਰਾ ਕਈ ਵਾਰੀ ਜਾ ਕੇ ਪਿਛਲੀ ਵਾਰ ਜਿੱਥੋਂ ਛੱਡਿਆ ਸੀ, ਓੱਥੋਂ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰ ਸਕਦੇ ਹੋ।",
 	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "ਤੁਸੀਂ ਆਪਣੀ ਅਵਾਜ਼ ਦੀਆਂ <b><span id=\"user-contribution\"></span></b><b><span></span></b> ਰਿਕਾਰਡਿੰਗਾਂ ਦਾ ਯੋਗਦਾਨ ਕੀਤਾ",
-	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ",
-	"<b>Read once</b> before recording it": "ਇਸ ਨੂੰ ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਪੜ੍ਹ ਲਵੋ",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ ਹੈ",
+	"<b>Read once</b> before recording it": "ਇਹ ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਪੜ੍ਹੋ",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, we want to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative": "ਬੋਲੀ ਪਛਾਣ ਤਕਨਾਲੋਜੀ \"ਮਸ਼ੀਨ ਸਿਖਲਾਈ\" ਤਕਨਾਲੋਜੀ 'ਤੇ ਨਿਰਭਰ ਕਰਦੀ ਹੈ ਜਿਸ ਲਈ ਬਹੁਤ ਵਿਸ਼ਾਲ ਮਾਤਰਾ ਵਿੱਚ ਡਾਟਾਸੈੱਟਾਂ ਦੇ ਸੰਗ੍ਰਹਿ ਦੀ ਲੋੜ ਹੁੰਦੀ ਹੈ, ਜਿਸ ਵਿੱਚ ਬਹੁਭਾਂਤੀ ਭਾਰਤੀ ਅਵਾਜ਼ਾਂ ਅਤੇ ਉਹਨਾਂ ਨਾਲ ਸੰਬੰਧਿਤ ਲਿਖਤਾਂ ਸ਼ਾਮਲ ਹੁੰਦੀਆਂ ਹਨ। ਵਾਕਿਆਂਸ਼ ਦੇ ਰਾਹੀਂ,ਅਸੀਂ ਭਾਰਤੀ ਭਾਸ਼ਾਵਾਂ ਬੋਲਣ ਵਾਲੀਆਂ ਭਾਰਤੀ ਅਵਾਜਾਂ ਦਾ ਇੱਕ ਵਿਭਿੰਨ ਖੁੱਲੇ ਸਰੋਤ ਦਾ ਭੰਡਾਰ ਬਣਾਉਣਾ ਚਾਹੁੰਦਾ ਹੈ, ਜਿਸ ਨੂੰ ਇਸ ਪਹਿਲ ਲਈ ਵਰਤਿਆ ਜਾ ਸਕੇ",
-	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "ਅੱਗੇ ਵੱਧਦੇ ਹੋਏ ਤੁਸੀਂ <a href=\"/terms-and-conditions\">ਨਿਯਮਾਂ ਅਤੇ ਸ਼ਰਤਾਂ</a> ਨਾਲ ਸਹਿਮਤ ਹੁੰਦੇ ਹੋ",
-	"Transgender - He": "Transgender - He",
-	"Transgender - She": "Transgender - She",
+	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "ਅੱਗੇ ਜਾਰੀ ਰੱਖ ਕੇ ਤੁਸੀਂ <a href=\"/terms-and-conditions\">ਸ਼ਰਤਾਂ ਤੇ ਨਿਯਮਾਂ</a> ਨਾਲ ਸਹਿਮਤ ਹੋ",
+	"Transgender - He": "ਟਰਾਂਸਜੈਂਡਰ - ਸ੍ਰੀਮਾਨ",
+	"Transgender - She": "ਟਰਾਂਸਜੈਂਡਰ - ਸ੍ਰੀਮਤੀ",
 	"Rather Not Say": "Rather Not Say",
 	"Feedback": "ਸੁਝਾਅ",
-	"Quick Tips": "ਕਵਿੱਕ ਨੁਕਤੇ",
-	"Read once <b>before recording it</b>": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਜ਼ਰੂਰ ਪੜ੍ਹੋ",
+	"Quick Tips": "ਫੌਰੀ ਗੁਰ",
+	"Read once <b>before recording it</b>": "ਇਹ ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਪੜ੍ਹੋ",
 	"Test your Microphone and Speakers": "ਆਪਣੇ ਮਾਈਕਰੋਫੋਨ ਅਤੇ ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test Mic": "ਮਾਈਕ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test Speakers": "ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
@@ -177,18 +176,18 @@
 	"More Languages": "ਹੋਰ ਭਾਸ਼ਾਵਾਂ",
 	"Other Languages": "ਦੂਜੀਆਂ ਭਾਸ਼ਾਵਾਂ",
 	"Get comfortable with the text before recording": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਲਿਖਤ ਨੂੰ ਚੰਗੀ ਤਰ੍ਹਾਂ ਪੜ੍ਹ ਅਤੇ ਸਮਝ ਲਓ",
-	"WooHoo!! You took the first important step": "ਬੱਲੇ! ਤੁਸੀਂ ਪਹਿਲਾ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਕਦਮ ਚੁੱਕਿਆ",
+	"WooHoo!! You took the first important step": "ਬੱਲੇ! ਤੁਸੀਂ ਪਹਿਲਾਂ ਜ਼ਰੂਰੀ ਕਦਮ ਚੁੱਕਿਆ",
 	"'x' Recordings contributed": "\"x\" ਰਿਕਾਰਡਿੰਗਾਂ ਦਾ ਯੋਗਦਾਨ ਕੀਤਾ ਗਿਆ",
 	"You are just 'x' sentences away from earning the Bronze Badge.": "ਤੁਸੀਂ ਬਰੌਨਜ਼ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
 	"You are just 'x' sentences away from earning the Silver Badge.": "ਤੁਸੀਂ ਸਿਲਵਰ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
 	"You are just 'x' sentences away from earning the Gold Badge.": "ਤੁਸੀਂ ਗੋਲਡ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
 	"You are just 'x' sentences away from earning the Platinum Badge.": "ਤੁਸੀਂ ਪਲੈਟੀਨਮ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
-	"You are a champion": "ਤੁਸੀਂ ਵਿਜੇਤਾ ਹੋ",
+	"You are a champion": "ਤੁਸੀਂ ਚੈਂਪੀਅਨ ਹੋ",
 	"Bronze": "ਬਰੌਨਜ਼",
 	"Silver": "ਸਿਲਵਰ",
 	"Gold": "ਗੋਲਡ",
 	"Platinum": "ਪਲੈਟੀਨਮ",
-	"Download": "ਡਾਊਨਲੋਡ ਕਰੋ",
+	"Download": "ਡਾਊਨਲੋਡ",
 	"You are on a spree!": "ਮੈਂ ਕਿਹਾ ਜੀ ਕਮਾਲ ਹੀ ਕਮਾਲ!",
 	"You are driving the spirit of your language": "ਤੁਸੀਂ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਿਖਰ ਤੱਕ ਲਿਜਾ ਰਹੇ ਹੋ",
 	"Woaah! You've earned your Bronze badge": "ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਬਰੌਨਜ਼ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
@@ -211,9 +210,10 @@
 	"Hateful Political views, amplifying hate-speech etc.": "ਨਫ਼ਰਤ ਭਰੇ ਰਾਜਨੀਤਿਕ ਪੱਖ, ਪੱਖਪਾਤੀ ਨਫ਼ਰਤੀ-ਭਾਸ਼ਣ ਆਦਿ",
 	"Misinformation": "ਗ਼ਲਤ ਜਾਣਕਾਰੀ",
 	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
-	"Thank You": "Thank You",
-	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.",
-	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
+	"Thank You": "ਤੁਹਾਡਾ ਧੰਨਵਾਦ ਹੈ",
+	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "ਤੁਹਾਡੇ ਸੁਝਾਅ ਬੋਲੋ ਇੰਡੀਆ ਨੂੰ ਢੁੱਕਵਾਂ ਬਣਾਉਣ ਲਈ ਮਦਦ ਕਰਦੇ ਹਨ, ਅਸੀਂ ਸੁਝਾਅ ਦੇਣ ਲਈ ਤੁਹਾਡੇ ਟਾਈਮ ਕੱਢਣ ਦੀ ਸ਼ਲਾਘਾ ਕਰਦੇ ਹਾਂ।",
+	"Congratulations!!! You have completed this batch of sentences": "ਵਧਾਈਆਂ!!! ਤੁਸੀਂ ਵਾਕਾਂ ਦਾ ਇਹ ਸਮੂਹ ਪੂਰਾ ਕਰ ਲਿਆ ਹੈ",
+	"Congratulations! You have validated a batch of recordings!": "ਵਧਾਈਆਂ! ਤੁਸੀਂ ਅਵਾਜ਼ੀ ਨਮੂਨਿਆਂ ਦੇ ਇੱਕ ਬੈਚ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕੀਤਾ!",
 	"Select the language for voluntary contribution": "ਵਲੰਟੀਅਰ ਯੋਗਦਾਨ ਲਈ ਭਾਸ਼ਾ ਚੁਣੋ",
 	"Speak": "Speak",
 	"Validate What They Say": "ਪ੍ਰਮਾਣਿਤ ਕਰੋ ਕਿ ਉਹਨਾਂ ਕੀ ਕਿਹਾ ਹੈ",
@@ -251,8 +251,18 @@
 	"Ambience noise detected": "ਮਾਹੌਲ ਵਿੱਚ ਰੌਲਾ ਖੋਜਿਆ ਗਿਆ",
 	"Please specify the reason (Optional)": "ਕਾਰਨ ਦਿਓ ਜੀ (ਮਨਮਰਜ਼ੀ ਮੁਤਾਬਕ)",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
-	"Congratulations!!! You have completed this batch of sentences": "ਵਧਾਈਆਂ!!! ਤੁਸੀਂ ਵਾਕਾਂ ਦਾ ਇਹ ਸਮੂਹ ਪੂਰਾ ਕਰ ਲਿਆ ਹੈ",
 	"social sharing text with rank": "ਮੈਂ http://boloindia.nplt.in ਰਾਹੀਂ ਭਾਰਤ ਲਈ ਆਜ਼ਾਦ ਭਾਸ਼ਾ ਭੰਡਾਰ ਬਣਾਉਣ ਵਾਸਤੇ ਯੋਗਦਾਨ ਪਾਇਆ ਹੈ। ਤੁਸੀਂ ਤੇ ਮੈਂ ਰਲ ਕੇ ਆਪਣੀਆਂ ਆਵਾਜ਼ਾਂ ਦਾ ਦਾਨ ਦੇ ਕੇ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ ਤਾਂ ਕਿ ਸਾਡੀ ਭਾਸ਼ਾਂ ਵਿੱਚ ਮਸ਼ੀਨ ਸਿਖਲਾਈ ਵਾਸਤੇ ਮਦਦ ਹੋਵੇ। ਬੋਲੋ ਇੰਡੀਆ ਉੱਤੇ ਸਾਡਾ %language ਭਾਸ਼ਾ ਦਰਜਾ %rank ਹੈ। ਆਪਣਾ ਹਿੱਸਾ ਪਾਉਣਾ ਤੇ ਭਾਸ਼ਾ ਨੂੰ ਮਜ਼ਬੂਤ ਕਰਨਾ ਹੈ?",
-	"social sharing text without rank": "ਮੈਂ http://boloindia.nplt.in ਰਾਹੀਂ ਭਾਰਤ ਲਈ ਆਜ਼ਾਦ ਭਾਸ਼ਾ ਭੰਡਾਰ ਬਣਾਉਣ ਵਾਸਤੇ ਯੋਗਦਾਨ ਪਾਇਆ ਹੈ। ਤੁਸੀਂ ਤੇ ਮੈਂ ਰਲ ਕੇ ਆਪਣੀਆਂ ਆਵਾਜ਼ਾਂ ਦਾ ਦਾਨ ਦੇ ਕੇ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ ਤਾਂ ਕਿ ਸਾਡੀ ਭਾਸ਼ਾਂ ਵਿੱਚ ਮਸ਼ੀਨ ਸਿਖਲਾਈ ਵਾਸਤੇ ਮਦਦ ਹੋਵੇ। ਆਪਣਾ ਹਿੱਸਾ ਪਾਉਣਾ ਤੇ ਭਾਸ਼ਾ ਨੂੰ ਮਜ਼ਬੂਤ ਕਰਨਾ ਹੈ?"
-
+	"social sharing text without rank": "ਮੈਂ http://boloindia.nplt.in ਰਾਹੀਂ ਭਾਰਤ ਲਈ ਆਜ਼ਾਦ ਭਾਸ਼ਾ ਭੰਡਾਰ ਬਣਾਉਣ ਵਾਸਤੇ ਯੋਗਦਾਨ ਪਾਇਆ ਹੈ। ਤੁਸੀਂ ਤੇ ਮੈਂ ਰਲ ਕੇ ਆਪਣੀਆਂ ਆਵਾਜ਼ਾਂ ਦਾ ਦਾਨ ਦੇ ਕੇ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ ਤਾਂ ਕਿ ਸਾਡੀ ਭਾਸ਼ਾਂ ਵਿੱਚ ਮਸ਼ੀਨ ਸਿਖਲਾਈ ਵਾਸਤੇ ਮਦਦ ਹੋਵੇ। ਆਪਣਾ ਹਿੱਸਾ ਪਾਉਣਾ ਤੇ ਭਾਸ਼ਾ ਨੂੰ ਮਜ਼ਬੂਤ ਕਰਨਾ ਹੈ?",
+	"National Language Translation Mission": "ਕੌਮੀ ਭਾਸ਼ਾ ਅਨੁਵਾਦ ਮਿਸ਼ਨ",
+	"Badge ID": "ਬਿੱਲਾ ਆਈਡੀ",
+	"recordings contributed": "ਰਿਕਾਰਡਿੰਗਾਂ ਦਾ ਯੋਗਦਾਨ ਪਾਇਆ",
+	"Did you know?": "ਕੀ ਤੁਹਾਨੂੰ ਪਤਾ ਹੈ?",
+	"Most Contributed - <span id=\"languageId\"></span>": "ਸਭ ਤੋਂ ਵੱਧ ਯੋਗਦਾਨ - <span id=\"languageId\"></span>",
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> ਲਈ ਰਿਕਾਰਡ ਕੀਤਾ ਡਾਟਾ",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "ਆਪਣੀ ਭਾਸ਼ਾਂ ਨੂੰ ਇਸ ਦੇ 100 ਘੰਟਿਆਂ ਦੇ ਟੀਚੇ ਨੂੰ ਪੂਰਨ ਲਈ ਮਦਦ ਕਰੋ। ਸਾਨੂੰ ਪਤਾ ਹੈ ਕਿ ਤੁਸੀਂ ਕਰ ਸਕਦੇ ਹੋ!",
+	"Thank you for your enthusiasm to validate the recordings.": "ਰਿਕਾਰਡਿੰਗਾਂ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡੇ ਜੋਸ਼ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ ਹੈ।",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "ਸਾਡੇ ਕੋਲ <span id=\"spn-validation-language\"></span> ਭਾਸ਼ਾ ਲਈ ਕੋਈ ਡਾਟਾ ਨਹੀਂ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਬਾਅਦ 'ਚ ਕੋਸ਼ਿਸ਼ ਕਰੋ।",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> ਵਿੱਚ ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰੋ",
+	"Please test your <b>speakers</b>": "ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ <b>ਸਪੀਕਰਾਂ</b> ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Gender Distribution": "ਲਿੰਗ ਮੁਤਾਬਕ ਵੰਡ"
 }
